Tue Mar 18 13:59:42 1997  Per Bothner  <bothner@deneb.cygnus.com>

	* RealNum.java (compare, compare_reversed, equals, grt, geq): Moved to
	* Quantity.java:  ... here
	* Quantity.java, Complex.java:  Implement compare methods.

Mon Mar 17 17:31:11 1997  Per Bothner  <bothner@deneb.cygnus.com>

	* BitOps.java (setBitOp):  Rewrite to work around Microsoft bug.
	* Unit.java (radian):  New static field, recommended by DSSSL.

Sat Mar  8 08:29:33 1997  Per Bothner  <bothner@deneb.cygnus.com>

	* Unit.java (define):  New static method.
	(cm, im):  Fix typos.
	* Numeric.java (sub): Make final.

Mon Feb  3 17:09:07 1997  Per Bothner  <bothner@kalessin.cygnus.com>

	* DFloNum.java (makeMethod):  Make public.
	* IntNum.java (makeIntMethod, makeLongMethod):  Make public.
	* {DFloNum,IntNum}.java (initMakeMethods):  New methods,
	* Makefile.{am,in} (CLEANFILES):  Delete *.class, not just $(OBJ).

Tue Jan 21 18:25:50 1997  Per Bothner  <bothner@deneb.cygnus.com>

	* Complex.java (doubleRealValue):  Synonym for doubleValue();
	(polar, power, abs, angle, div, div_reversed, exp, log, sqrt):  New.
	* DComplex.java (div, power, log, sqrt, hypot):  New methods.
	* RealNum.java (dov, angle, exp, log, sin, sqrt):  New methods.
	* Unit.java (sqrt): New (placeholder) method.
	(mul):  Add extra simplifications.
	* MulUnit.java (sqrt):  New method.

Mon Jan 20 15:58:50 1997  Per Bothner  <bothner@kalessin.cygnus.com>

	* Numeric.java:  Inherit from java.lang.Number.
	(intValue, longValue): New methods.
	* Complex.java, DFloNum.java, IntFraction.java:  New longValue method.

	* DQuantity.java (add):  Adjust for different units.
	* IntNum.java (longValue):  Support non-normalized value.
	(appendWord, increment_unsigned, increment): Remove useless code.
	* Unit.java:  Added minute and hour.

Fri Jan  3 14:44:53 1997  Per Bothner  <bothner@deneb.cygnus.com>

	Implemented units, quantities, and dimensions for measurements.
	Implemented complex numbers.